<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/number"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/number_example"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/nickname_example"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/number"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/role"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/role_example"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/nickname"
        app:layout_constraintEnd_toStartOf="@+id/points"
        app:layout_constraintStart_toEndOf="@+id/nickname"
        app:layout_constraintTop_toTopOf="@+id/nickname" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/points"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/points_example"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>